force-app/main/default/objects/Animal360_Status_Transition_Rule__mdt/Animal360_Status_Transition_Rule__mdt.object-meta.xml
<CustomObject>
    <description
  >Maps target welfare risk levels to episode current-state updates and review timing.</description>
    <label>Animal360 Status Transition Rule</label>
    <pluralLabel>Animal360 Status Transition Rules</pluralLabel>
</CustomObject>