force-app/main/default/objects/Animal360_Status_Transition_Rule__mdt/fields/Action_Label__c.field-meta.xml
<CustomField>
    <fullName>Action_Label__c</fullName>
    <description
  >Short action guidance label used in escalation messaging.</description>
    <label>Action Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>