force-app/main/default/objects/Animal360_Status_Transition_Rule__mdt/fields/Clinical_Priority__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Priority__c</fullName>
    <description
  >Clinical priority set on the episode for the target risk level.</description>
    <label>Clinical Priority</label>
    <length>40</length>
    <type>Text</type>
</CustomField>