force-app/main/default/objects/Animal360_Status_Transition_Rule__mdt/fields/Review_Days__c.field-meta.xml
<CustomField>
    <fullName>Review_Days__c</fullName>
    <description>Days until next review for the target risk level.</description>
    <label>Review Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>