force-app/main/default/objects/Animal360_Status_Transition_Rule__mdt/fields/Target_Welfare_Risk__c.field-meta.xml
<CustomField>
    <fullName>Target_Welfare_Risk__c</fullName>
    <description
  >Target welfare risk level produced by assessment evaluation.</description>
    <label>Target Welfare Risk</label>
    <length>40</length>
    <type>Text</type>
</CustomField>